Pull up following revision(s) (requested by riastradh in ticket #792):

common/lib/libc/stdlib/_strtoi.h: revision 1.3
	lib/libc/stdlib/strtou.3: revision 1.8
	lib/libc/stdlib/strtonum.c: revision 1.7
	lib/libc/stdlib/Makefile.inc: revision 1.97
	lib/libc/stdlib/strtoi.3: revision 1.8
	lib/libc/stdlib/strtoi.3: revision 1.9
	lib/libc/stdlib/strtou.3: file removal
	tests/lib/libc/stdlib/t_strtoi.c: revision 1.3

PR/57828: Alejandro Colomar: Prioritize test for ERANGE before testing for
fully consuming the string. Adjust strtonum(3) to behave as before. Document
the order of the tests and sync the man pages (I should really autogenerate
one of the two man pages...)

generate strtou.3 from strtoi.3, grammar police

Add range tests with trailing characters.